--- a/index.html
+++ b/index.html
@@ -4,58 +4,58 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>"Homework-#-2-home-page"</title>
+        <title>"Homework-#-3-home-page"</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="./css/modern-normalize.css">
         <link rel="stylesheet" href="./css/styles.css" />
-    </head>
+    </head> 
     <body class="body-styles">
+<!-- Header -->
         <header>
-            <!-- Header -->
+    <div class="container">
+        <div class="all_nav">
+            <a class="nav_all_link_logo studiocolor-top" href="https://masenkoss.github.io/goit-markup-hw-02/"><span class="webcolor">Web</span>Studio</a>
             <nav>
-                <a class="studiocolor-top" href="https://masenkoss.github.io/goit-markup-hw-02/"
-                    ><span class="webcolor">Web</span>Studio</a
-                >
-                <ul>
-                    <li>
-                        <a
-                            class="nav-link"
-                            href="https://masenkoss.github.io/goit-markup-hw-02/index.html"
-                            >Студия</a
-                        >
+                <ul class="nav_all_link">
+                    <li class="item">
+                        <a class="nav-link" href="https://masenkoss.github.io/goit-markup-hw-02/index.html">Студия</a>
                     </li>
-                    <li>
-                        <a
-                            class="nav-link"
-                            href="https://masenkoss.github.io/goit-markup-hw-02/portfolio.html"
-                            >Портфолио</a
-                        >
+                    <li class="item">
+                        <a class="nav-link" href="https://masenkoss.github.io/goit-markup-hw-02/portfolio.html">Портфолио</a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a class="nav-link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul>
-                <li>
+             <div>
+            <ul class="contact_nav">
+                <li class="item">
                     <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="nav-link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
+            </div>
+        </div>
+    </div>
         </header>
         <!-- Start main-content -->
         <main>
+        <div class="container">
             <section class="complementary">
                 <h1 class="font-size-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button type="button" class="pointer font-size-button-index">
                     Заказать услугу
                 </button>
             </section>
+        </div>
+        <div class="container">
             <section>
                 <h3 class="text-title-h3-index">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                 <ul>
@@ -85,7 +85,8 @@
                     </li>
                 </ul>
             </section>
-            <section>
+        </div>
+            <section class="container">
                 <h2 class="text-title-h2-index">Чем мы занимаемся</h2>
                 <ul>
                     <li><img src="./images/engage_a.jpg" alt="engage1" width="370" /></li>
@@ -93,7 +94,7 @@
                     <li><img src="./images/engage_c.jpg" alt="engage3" width="370" /></li>
                 </ul>
             </section>
-            <section>
+            <section class="container">
                 <h2 class="text-title-h2-index">Наша команда</h2>
                 <ul>
                     <li>
@@ -121,7 +122,7 @@
             </section>
         </main>
         <!-- Footer -->
-        <footer class="footer">
+        <footer class="container footer">
             <a class="studiocolor-bottom" href="https://masenkoss.github.io/goit-markup-hw-02/"
                 ><span class="webcolor">Web</span>Studio</a
             >
