flexbox_main_font-size-title

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,44 +10,39 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
-                <link rel="stylesheet" href="./css/modern-normalize.css">
+        <link rel="stylesheet" href="./css/modern-normalize.css">
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body class="body-styles">
         <header>
-            <!-- Header -->
-            <nav>
-                <a class="studiocolor-top" href="https://masenkoss.github.io/goit-markup-hw-02/"
-                    ><span class="webcolor">Web</span>Studio</a
-                >
-                <ul class="text-nav">
-                    <li>
-                        <a
-                            class="nav-link"
-                            href="https://masenkoss.github.io/goit-markup-hw-02/index.html"
-                            >Студия</a
-                        >
-                    </li>
-                    <li>
-                        <a
-                            class="nav-link"
-                            href="https://masenkoss.github.io/goit-markup-hw-02/portfolio.html"
-                            >Портфолио</a
-                        >
-                    </li>
-                    <li>
-                        <a class="nav-link" href="">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <ul>
-                <li>
-                    <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="nav-link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
+            <div class="container">
+                <div class="all_nav">
+                    <a class="nav_all_link_logo studiocolor-top" href="https://masenkoss.github.io/goit-markup-hw-02/"><span class="webcolor">Web</span>Studio</a>
+                    <nav>
+                        <ul class="nav_all_link">
+                            <li class="item">
+                                <a class="nav-link" href="https://masenkoss.github.io/goit-markup-hw-02/index.html">Студия</a>
+                            </li>
+                            <li class="item">
+                                <a class="nav-link" href="https://masenkoss.github.io/goit-markup-hw-02/portfolio.html">Портфолио</a>
+                            </li>
+                            <li class="item">
+                                <a class="nav-link" href="">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                     <div>
+                    <ul class="contact_nav">
+                        <li class="item">
+                            <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
+                        </li>
+                        <li class="item">
+                            <a class="nav-link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
         </header>
         <!-- Main-content -->
         <main>
