--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <main>
         <div class="container">
             <section class="complementary">
-                <h1 class="font-size-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <h1 class="font-size-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<span>ДЛЯ ВАШЕГО БИЗНЕСА</span></h1>
                 <button type="button" class="pointer font-size-button-index">
                     Заказать услугу
                 </button>
@@ -136,5 +136,8 @@
                 </li>
             </ul>
         </footer>
+
+<!-- Test -->
+
     </body>
 </html>
