flexbox_main_complementary_h3

--- a/index.html
+++ b/index.html
@@ -46,46 +46,44 @@
     </div>
         </header>
         <!-- Start main-content -->
-        <main>
-        <div class="container">
-            <section class="complementary">
+        <main class="container">
+            <section class="complementary section">
                 <h1 class="font-size-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<span>ДЛЯ ВАШЕГО БИЗНЕСА</span></h1>
                 <button type="button" class="pointer font-size-button-index">
-                    Заказать услугу
+                    Заказать слугу
                 </button>
             </section>
-        </div>
-        <div class="container">
-            <section>
-                <h3 class="text-title-h3-index">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                <ul>
+            <section class="section">
+            <div class="all_main_h3">
+                <ul class="item">
                     <li class="text-index">
-                        Идейные соображения, а также начало повседневной работы по формированию
-                        позиции.
+                        <h3 class="text-title-h3-index">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                        <p> Идейные соображения, а также начало повседневной работы по формированию
+                        позиции.</p>
                     </li>
                 </ul>
-                <h3 class="text-title-h3-index">ПУНКТУАЛЬНОСТЬ</h3>
-                <ul>
+                <ul class="item">
                     <li class="text-index">
-                        Задача организации, в особенности же рамки и место обучения кадров влечет за
-                        собой.
+                        <h3 class="text-title-h3-index">ПУНКТУАЛЬНОСТЬ</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
+                        собой.</p>
                     </li>
                 </ul>
-                <h3 class="text-title-h3-index">ПЛАНИРОВАНИЕ</h3>
-                <ul>
+                <ul class="item">
                     <li class="text-index">
-                        Равным образом консультация с широким активом в значительной степени
-                        обуславливает.
+                        <h3 class="text-title-h3-index">ПЛАНИРОВАНИЕ</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</p>
                     </li>
                 </ul>
-                <h3 class="text-title-h3-index">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                <ul>
+                <ul class="item">
                     <li class="text-index">
-                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        <h3 class="text-title-h3-index">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
-            </section>
-        </div>
+            </div>
+        </section>
             <section class="container">
                 <h2 class="text-title-h2-index">Чем мы занимаемся</h2>
                 <ul>
