--- a/index.html
+++ b/index.html
@@ -84,39 +84,42 @@
                 </ul>
             </div>
         </section>
-            <section class="container">
-                <h2 class="text-title-h2-index">Чем мы занимаемся</h2>
-                <ul>
-                    <li><img src="./images/engage_a.jpg" alt="engage1" width="370" /></li>
-                    <li><img src="./images/engage_b.jpg" alt="engage2" width="370" /></li>
-                    <li><img src="./images/engage_c.jpg" alt="engage3" width="370" /></li>
+            <section class="section">
+            <div class="section_h2">
+            <h2 class="text-title-h2-index">Чем мы занимаемся</h2>
+                <ul class="all_main_h2">
+                    <li class="item"><img src="./images/engage_a.jpg" alt="engage1" width="370" /></li>
+                    <li class="item"><img src="./images/engage_b.jpg" alt="engage2" width="370" /></li>
+                    <li class="item"><img src="./images/engage_c.jpg" alt="engage3" width="370" /></li>
                 </ul>
+            </div>
             </section>
-            <section class="container">
+            <section class="section">
                 <h2 class="text-title-h2-index">Наша команда</h2>
-                <ul>
-                    <li>
+
+                <ul class="all_main_h2_team">
+                    <li class="item_team">
                         <img src="./images/pd.jpg" alt="product designer" width="270" />
                         <h4 class="text-team-index">Игорь Демьяненко</h4>
                         <p class="text-command-professions-index">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="item_team">
                         <img src="./images/fd.jpg" alt="frontend developer" width="270" />
                         <h4 class="text-team-index">Ольга Репина</h4>
                         <p class="text-command-professions-index">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="item_team">
                         <img src="./images/m.jpg" alt="marketing" width="270" />
                         <h4 class="text-team-index">Николай Тарасов</h4>
                         <p class="text-command-professions-index">Marketing</p>
                     </li>
-                    <li></li>
-                    <li>
+                    <li class="item_team">
                         <img src="./images/uid.jpg" alt="ui designer" width="270" />
                         <h4 class="text-team-index">Михаил Ермаков</h4>
                         <p class="text-command-professions-index">UI Designer</p>
                     </li>
                 </ul>
+
             </section>
         </main>
         <!-- Footer -->
