percentage_hw_portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,19 +132,26 @@
             </section>
         </main>
         <!-- Footer -->
-        <footer class="footer">
-            <a class="studiocolor-bottom" href="https://masenkoss.github.io/goit-markup-hw-02/"
-                ><span class="webcolor">Web</span>Studio</a
-            >
-            <address class="address-index">г. Киев, пр-т Леси Украинки, 26</address>
-            <ul>
-                <li>
-                    <a class="nav-text-footer" href="mailto:">info@example.com</a>
-                </li>
-                <li>
-                    <a class="nav-text-footer" href="tel:+380961111111">+38 099 111 11 11</a>
-                </li>
-            </ul>
+        <footer>
+            <div class="container section">
+                <div class="footer_all">
+                    <div class="footer_all_box">
+                        <a class="studiocolor_bottom" href="https://masenkoss.github.io/goit-markup-hw-02/"
+                            ><span class="webcolor">Web</span>Studio</a>
+                        <ul class="footer_all_box_contacts">
+                            <li>
+                                <address class="address_index">г. Киев, пр-т Леси Украинки, 26</address>
+                            </li>
+                            <li>
+                                <a class="nav-text-footer" href="mailto:">info@example.com</a>
+                            </li>
+                            <li>
+                                <a class="nav-text-footer" href="tel:+380961111111">+38 099 111 11 11</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
