first edits from the mentor

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-styles">
-    <header>
-      <div class="container section header_border">
+    <header class="header_border">
+      <div class="container">
         <div class="all_nav">
           <a
-            class="nav_all_link_logo studiocolor-top"
-            href="https://masenkoss.github.io/goit-markup-hw-02/"
+            class="studiocolor_top"
+            href="https://masenkoss.github.io/goit-markup-hw-03/index.html"
             ><span class="webcolor">Web</span>Studio</a
           >
           <nav>
@@ -43,25 +43,23 @@
               </li>
             </ul>
           </nav>
-          <div>
-            <ul class="contact_nav">
-              <li class="item">
-                <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
-              </li>
-              <li class="item">
-                <a class="nav-link-tel" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-          </div>
+          <ul class="contact_nav">
+            <li class="item">
+              <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a class="nav-link-tel" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </header>
     <!-- Main-content -->
     <main>
-      <div class="container">
-        <section class="section">
+      <section class="section">
+        <div class="container">
           <div class="button_portfolio">
             <ul class="all_portfolio_button">
               <li>
@@ -106,84 +104,100 @@
               </li>
             </ul>
           </div>
-          <div class="portfolio_icon">
-            <ul>
-              <li class="portfolio_element">
-                <img src="./images/web-site-m.jpg" alt="web-site" />
+          <ul class="portfolio_icon">
+            <li class="portfolio_element">
+              <img src="./images/web-site-m.jpg" alt="web-site" width="370" />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">Технокряк</h2>
                 <p class="text-portfolio">Веб-сайт</p>
-              </li>
-              <li class="portfolio_element">
-                <img
-                  src="./images/golden-star-m.jpg"
-                  alt="golden star"
-                  width="370"
-                />
+              </div>
+            </li>
+            <li class="portfolio_element">
+              <img
+                src="./images/golden-star-m.jpg"
+                alt="golden star"
+                width="370"
+              />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">
                   Постер New Orlean vs Golden Star
                 </h2>
                 <p class="text-portfolio">Дизайн</p>
-              </li>
-              <li class="portfolio_element">
-                <img src="./images/seafood-m.jpg" alt="seafood" width="370" />
+              </div>
+            </li>
+            <li class="portfolio_element">
+              <img src="./images/seafood-m.jpg" alt="seafood" width="370" />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">Ресторан Seafood</h2>
                 <p class="text-portfolio">Приложение</p>
-              </li>
-              <li class="portfolio_element">
-                <img src="./images/prime-m.jpg" alt="prime" width="370" />
+              </div>
+            </li>
+            <li class="portfolio_element">
+              <img src="./images/prime-m.jpg" alt="prime" width="370" />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">Проект Prime</h2>
                 <p class="text-portfolio">Маркетинг</p>
-              </li>
-              <li class="portfolio_element">
-                <img src="./images/boxes-m.jpg" alt="boxes" width="370" />
+              </div>
+            </li>
+            <li class="portfolio_element">
+              <img src="./images/boxes-m.jpg" alt="boxes" width="370" />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">Проект Boxes</h2>
                 <p class="text-portfolio">Приложение</p>
-              </li>
-              <li class="portfolio_element">
-                <img
-                  src="./images/inspiration-m.jpg"
-                  alt="inspiration"
-                  width="370"
-                />
+              </div>
+            </li>
+            <li class="portfolio_element">
+              <img
+                src="./images/inspiration-m.jpg"
+                alt="inspiration"
+                width="370"
+              />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">Inspiration has no Borders</h2>
                 <p class="text-portfolio">Веб-сайт</p>
-              </li>
-              <li class="portfolio_element">
-                <img
-                  src="./images/limited-edition-m.jpg"
-                  alt="limited edition"
-                  width="370"
-                />
+              </div>
+            </li>
+            <li class="portfolio_element">
+              <img
+                src="./images/limited-edition-m.jpg"
+                alt="limited edition"
+                width="370"
+              />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">Издание Limited Edition</h2>
                 <p class="text-portfolio">Дизайн</p>
-              </li>
-              <li class="portfolio_element">
-                <img src="./images/lab-m.jpg" alt="lab" width="370" />
+              </div>
+            </li>
+            <li class="portfolio_element">
+              <img src="./images/lab-m.jpg" alt="lab" width="370" />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">Проект LAB</h2>
                 <p class="text-portfolio">Маркетинг</p>
-              </li>
-              <li class="portfolio_element">
-                <img
-                  src="./images/growing-business-m.jpg"
-                  alt="growing business"
-                  width="370"
-                />
+              </div>
+            </li>
+            <li class="portfolio_element">
+              <img
+                src="./images/growing-business-m.jpg"
+                alt="growing business"
+                width="370"
+              />
+              <div class="item_text">
                 <h2 class="text-title-portfolio">Growing Business</h2>
                 <p class="text-portfolio">Приложение</p>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer>
-      <div class="container section">
+      <div class="container">
         <div class="footer_all">
           <div class="footer_all_box">
             <a
               class="studiocolor_bottom"
-              href="https://masenkoss.github.io/goit-markup-hw-02/"
+              href="https://masenkoss.github.io/goit-markup-hw-03/index.html"
               ><span class="webcolor">Web</span>Studio</a
             >
             <ul class="footer_all_box_contacts">
