--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   </head>
   <body class="body-styles">
     <!-- Header -->
-    <header>
-      <div class="container section header_border">
+    <header class="header_border">
+      <div class="container">
         <div class="all_nav">
           <a
-            class="nav_all_link_logo studiocolor-top"
-            href="https://masenkoss.github.io/goit-markup-hw-02/"
+            class="studiocolor_top"
+            href="https://masenkoss.github.io/goit-markup-hw-03/index.html"
             ><span class="webcolor">Web</span>Studio</a
           >
           <nav>
@@ -44,33 +44,35 @@
               </li>
             </ul>
           </nav>
-          <div>
-            <ul class="contact_nav">
-              <li class="item">
-                <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
-              </li>
-              <li class="item">
-                <a class="nav-link-tel" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-          </div>
+          <ul class="contact_nav">
+            <li class="item">
+              <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a class="nav-link-tel" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </header>
     <!-- Start main-content -->
     <main>
-      <div class="container">
-        <section class="complementary section">
-          <h1 class="font-size-title">
+      <section class="section">
+        <div class="container">
+          <h1 class="font_size_title">
             ЭФФЕКТИВНЫЕ РЕШЕНИЯ<span>ДЛЯ ВАШЕГО БИЗНЕСА</span>
           </h1>
+        </div>
+        <div class="container">
           <button type="button" class="pointer font-size-button-index">
             Заказать слугу
           </button>
-        </section>
-        <section class="section">
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
           <div class="all_main_h3">
             <ul class="item">
               <li class="text-index">
@@ -109,10 +111,12 @@
               </li>
             </ul>
           </div>
-        </section>
-        <section class="section">
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
           <div class="section_h2">
-            <h2 class="text-title-h2-index">Чем мы занимаемся</h2>
+            <h2 class="text_title_h2_index">Чем мы занимаемся</h2>
             <ul class="all_main_h2">
               <li class="item">
                 <img src="./images/engage_a.jpg" alt="engage1" width="370" />
@@ -125,10 +129,11 @@
               </li>
             </ul>
           </div>
-        </section>
-        <section class="section">
-          <h2 class="text-title-h2-index">Наша команда</h2>
-
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="text_title_h2_index">Наша команда</h2>
           <ul class="all_main_h2_team">
             <li class="item_team">
               <img src="./images/pd.jpg" alt="product designer" width="270" />
@@ -151,17 +156,17 @@
               <p class="text-command-professions-index">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer>
-      <div class="container section">
+      <div class="container">
         <div class="footer_all">
           <div class="footer_all_box">
             <a
               class="studiocolor_bottom"
-              href="https://masenkoss.github.io/goit-markup-hw-02/"
+              href="https://masenkoss.github.io/goit-markup-hw-03/index.html"
               ><span class="webcolor">Web</span>Studio</a
             >
             <ul class="footer_all_box_contacts">
