third edits from mentor

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="font_size_title">
-            ЭФФЕКТИВНЫЕ РЕШЕНИЯ<span>ДЛЯ ВАШЕГО БИЗНЕСА</span>
-          </h1>
-        </div>
-        <div class="container">
-          <button type="button" class="pointer font-size-button-index">
-            Заказать слугу
-          </button>
+          <div class="hero_title">
+            <h1 class="font_size_title">
+              ЭФФЕКТИВНЫЕ РЕШЕНИЯ<span>ДЛЯ ВАШЕГО БИЗНЕСА</span>
+            </h1>
+            <button type="button" class="pointer font-size-button-index">
+              Заказать слугу
+            </button>
+          </div>
         </div>
       </section>
       <section class="section">
@@ -137,54 +137,60 @@
           <ul class="all_main_h2_team">
             <li class="item_team">
               <img src="./images/pd.jpg" alt="product designer" width="270" />
-              <h4 class="text-team-index">Игорь Демьяненко</h4>
-              <p class="text-command-professions-index">Product Designer</p>
+              <div class="item_team_overall">
+                <h4 class="text-team-index">Игорь Демьяненко</h4>
+                <p class="text-command-professions-index">Product Designer</p>
+              </div>
             </li>
             <li class="item_team">
               <img src="./images/fd.jpg" alt="frontend developer" width="270" />
-              <h4 class="text-team-index">Ольга Репина</h4>
-              <p class="text-command-professions-index">Frontend Developer</p>
+              <div class="item_team_overall">
+                <h4 class="text-team-index">Ольга Репина</h4>
+                <p class="text-command-professions-index">Frontend Developer</p>
+              </div>
             </li>
             <li class="item_team">
               <img src="./images/m.jpg" alt="marketing" width="270" />
-              <h4 class="text-team-index">Николай Тарасов</h4>
-              <p class="text-command-professions-index">Marketing</p>
+              <div class="item_team_overall">
+                <h4 class="text-team-index">Николай Тарасов</h4>
+                <p class="text-command-professions-index">Marketing</p>
+              </div>
             </li>
             <li class="item_team">
               <img src="./images/uid.jpg" alt="ui designer" width="270" />
-              <h4 class="text-team-index">Михаил Ермаков</h4>
-              <p class="text-command-professions-index">UI Designer</p>
+              <div class="item_team_overall">
+                <h4 class="text-team-index">Михаил Ермаков</h4>
+                <p class="text-command-professions-index">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer_background">
       <div class="container">
-        <div class="footer_all">
-          <div class="footer_all_box">
-            <a
-              class="studiocolor_bottom"
-              href="https://masenkoss.github.io/goit-markup-hw-03/index.html"
-              ><span class="webcolor">Web</span>Studio</a
-            >
-            <ul class="footer_all_box_contacts">
-              <li>
-                <address class="address_index">
-                  г. Киев, пр-т Леси Украинки, 26
-                </address>
-              </li>
-              <li>
-                <a class="nav-text-footer" href="mailto:">info@example.com</a>
-              </li>
-              <li>
-                <a class="nav-text-footer" href="tel:+380961111111"
-                  >+38 099 111 11 11</a
-                >
-              </li>
-            </ul>
-          </div>
+        <div class="footer_all_box">
+          <a
+            class="studiocolor_bottom"
+            href="https://masenkoss.github.io/goit-markup-hw-03/index.html"
+            ><span class="webcolor">Web</span>Studio</a
+          >
+          <ul class="footer_all_box_contacts">
+            <li>
+              <address class="address_index">
+                г. Киев, пр-т Леси Украинки, 26
+              </address>
+            </li>
+            <li>
+              <a class="nav-text-footer" href="mailto:">info@example.com</a>
+            </li>
+            <li>
+              <a class="nav-text-footer" href="tel:+380961111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
