--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-styles">
+    <!-- Header -->
     <header class="header_border">
       <div class="container">
         <div class="all_nav">
@@ -60,50 +61,33 @@
     <main>
       <section class="section">
         <div class="container">
-          <div class="button_portfolio">
-            <ul class="all_portfolio_button">
-              <li>
-                <button
-                  type="button"
-                  class="pointer font-size-button-portfolio"
-                >
-                  Все
-                </button>
-              </li>
-              <li>
-                <button
-                  type="button"
-                  class="pointer font-size-button-portfolio"
-                >
-                  Веб-сайты
-                </button>
-              </li>
-              <li>
-                <button
-                  type="button"
-                  class="pointer font-size-button-portfolio"
-                >
-                  Приложения
-                </button>
-              </li>
-              <li>
-                <button
-                  type="button"
-                  class="pointer font-size-button-portfolio"
-                >
-                  Дизайн
-                </button>
-              </li>
-              <li>
-                <button
-                  type="button"
-                  class="pointer font-size-button-portfolio"
-                >
-                  Маркетинг
-                </button>
-              </li>
-            </ul>
-          </div>
+          <ul class="all_portfolio_button">
+            <li>
+              <button type="button" class="pointer font-size-button-portfolio">
+                Все
+              </button>
+            </li>
+            <li>
+              <button type="button" class="pointer font-size-button-portfolio">
+                Веб-сайты
+              </button>
+            </li>
+            <li>
+              <button type="button" class="pointer font-size-button-portfolio">
+                Приложения
+              </button>
+            </li>
+            <li>
+              <button type="button" class="pointer font-size-button-portfolio">
+                Дизайн
+              </button>
+            </li>
+            <li>
+              <button type="button" class="pointer font-size-button-portfolio">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
           <ul class="portfolio_icon">
             <li class="portfolio_element">
               <img src="./images/web-site-m.jpg" alt="web-site" width="370" />
@@ -191,31 +175,29 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer_background">
       <div class="container">
-        <div class="footer_all">
-          <div class="footer_all_box">
-            <a
-              class="studiocolor_bottom"
-              href="https://masenkoss.github.io/goit-markup-hw-03/index.html"
-              ><span class="webcolor">Web</span>Studio</a
-            >
-            <ul class="footer_all_box_contacts">
-              <li>
-                <address class="address_index">
-                  г. Киев, пр-т Леси Украинки, 26
-                </address>
-              </li>
-              <li>
-                <a class="nav-text-footer" href="mailto:">info@example.com</a>
-              </li>
-              <li>
-                <a class="nav-text-footer" href="tel:+380961111111"
-                  >+38 099 111 11 11</a
-                >
-              </li>
-            </ul>
-          </div>
+        <div class="footer_all_box">
+          <a
+            class="studiocolor_bottom"
+            href="https://masenkoss.github.io/goit-markup-hw-03/index.html"
+            ><span class="webcolor">Web</span>Studio</a
+          >
+          <ul class="footer_all_box_contacts">
+            <li>
+              <address class="address_index">
+                г. Киев, пр-т Леси Украинки, 26
+              </address>
+            </li>
+            <li>
+              <a class="nav-text-footer" href="mailto:">info@example.com</a>
+            </li>
+            <li>
+              <a class="nav-text-footer" href="tel:+380961111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
