third edits from mentor_padding

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
       </div>
     </header>
     <!-- Main-content -->
-    <main>
+    <main class="main_general">
       <section class="section">
         <div class="container">
           <ul class="all_portfolio_button">
