--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
     <!-- Start main-content -->
     <main>
-      <section class="section">
+      <section class="section hero_section_top">
         <div class="container">
           <div class="hero_title">
             <h1 class="font_size_title">
@@ -113,7 +113,7 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <section class="section zeroing_section_top">
         <div class="container">
           <div class="section_h2">
             <h2 class="text_title_h2_index">Чем мы занимаемся</h2>
@@ -131,7 +131,7 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <section class="section zeroing_section_top">
         <div class="container">
           <h2 class="text_title_h2_index">Наша команда</h2>
           <ul class="all_main_h2_team">
