final hw 2 edits from mentor

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
         </div>
       </section>
-      <section class="section zeroing_section_top">
+      <section class="section">
         <div class="container">
           <h2 class="text_title_h2_index">Наша команда</h2>
           <ul class="all_main_h2_team">
